# PM

./: .gitignore  DIAGNOSTIC_FINDINGS.md  IMPLEMENTATION_STATUS.md  OPTIMIZATION_PLAN.md  README.md  __main__.py  analyze_common_offset.py  analyze_differences.py  benchmark_amplitude_corrections.py  benchmark_antialiasing.py  benchmark_backends.py  benchmark_metal_corrections.py  benchmark_metal_images.py  benchmark_metal_synthetic.py  benchmark_time_variant.py  create_cig_images.py  create_diffractor_synthetic.py  create_diffractor_synthetic_v2.py  create_impulse_response.py  create_impulse_response_clean.py  create_nmo_stack.py  create_nmo_stack_bin25.py  create_stack_pictures.py  create_stack_qc_images.py  create_synthetic_azimuth_data.py  create_velocity_cube_20m.py  diagnose_pstm_bug.py  diagnose_pstm_pipeline.py  diagnostic_aa_boundary.py  diagnostic_aa_trace_analysis.py  diagnostic_amplitude_test.py  diagnostic_boundary_tile.py  diagnostic_coherency_test.py  diagnostic_coord_check.py  diagnostic_coordinate_check.py  diagnostic_executor_compare.py  diagnostic_find_good_location.py  diagnostic_fold_exact.py  diagnostic_fresh_compare.py  diagnostic_kernel_compare.py  (+67 more)
backup_20251222/: base.py  executor.py  metal_compiled.py
backup_20251222/shaders/: migrate_optimized.metal  migrate_tile.metal  pstm_anisotropic_vti.metal  pstm_curved_ray.metal  pstm_migration.metal
benchmark_antialiasing_output/: benchmark_results.txt
benchmark_antialiasing_output/input_data/: headers.parquet  metadata.json
benchmark_antialiasing_output/input_data/traces.zarr/: .zattrs  10.0  11.0  12.0  13.0  4.0  5.0  6.0  7.0  9.0
benchmark_antialiasing_output/triangle_aa/fold.zarr/: zarr.json
benchmark_antialiasing_output/triangle_aa_both_amp/migrated_stack.zarr/: zarr.json
benchmark_output/: benchmark_results.txt
benchmark_output/input_data/traces.zarr/: .zarray  0.0  1.0  2.0  3.0  8.0
benchmark_output/spreading_only/: bin_headers.parquet
docs/: ADVANCED_KERNELS_PLAN.md  ANTIALIASING_DESIGN.md  ANTIALIASING_TASKS.md  PSTM_CODE_FLOW_ANALYSIS.md  SURFACE_CONSISTENT_ARCHITECTURE.md  TIME_VARIANT_SAMPLING_DESIGN.md  TIME_VARIANT_SAMPLING_TASKS.md  gpu_architecture_design.md  kernel_optimization_analysis.md  kernel_profiling_results.md  metal_kernel_tasks.md  metal_optimization_roadmap.md
examples/: synthetic_gather_demo.py
pstm/: __init__.py  __main__.py  settings.py
pstm/algorithm/: anisotropy_vti.py  curved_ray.py  time_variant.py
pstm/analysis/: __init__.py  bin_size.py  grid_outliers.py
pstm/config/: __init__.py  backends.py  data_selection.py  models.py  output_grid.py
pstm/data/: __init__.py  memmap_manager.py  output_grid.py  parquet_headers.py  selection.py  spatial_index.py  trace_cache.py  velocity_model.py  zarr_reader.py
pstm/gui/: __init__.py  __main__.py  main_window.py  migration_dialog.py  migration_worker.py  models.py  state.py  theme.py
pstm/kernels/: __init__.py  antialiasing.py  base.py  factory.py  interpolation.py  metal_compiled.py  metal_cpp.py  mlx_metal.py  numba_cpu.py  numba_cpu_optimized.py  numpy_reference.py  trace_centric.py
pstm/metal/: CMakeLists.txt  pstm_kernels.metallib
pstm/metal/include/: metal_kernel.h  metal_types.h
pstm/metal/python/: __init__.py
pstm/metal/shaders/: pstm_anisotropic_vti.metal  pstm_curved_ray.metal  pstm_migration.metal  pstm_trace_centric.metal
pstm/metal/src/: bindings.cpp  kernel_benchmark.mm  metal_device.mm  migration_kernel.mm
pstm/pipeline/: __init__.py  checkpoint.py  cig.py  executor.py  tile_cache_executor.py  tile_planner.py  trace_centric_executor.py
pstm/progress/: __init__.py  events.py
pstm/qc/: analysis.py  visualization.py
pstm/synthetic/: common_offset_gathers.py
pstm/utils/: edge_cases.py  logging.py  profiling.py  units.py
pstm/wizard/: __init__.py  app.py
pstm_stack_21_26/pstm_stack_21_26.zarr/: zarr.json
pstm_stacked.zarr/: zarr.json
pstm_view_va/: __init__.py  __main__.py  app.py
pstm_view_va/core/: __init__.py  data_types.py  palettes.py  project.py  velocity_picks.py
pstm_view_va/dialogs/: __init__.py  settings.py  stacking.py  startup.py
pstm_view_va/io/: __init__.py  velocity.py
pstm_view_va/processing/: __init__.py  filters.py  gather.py  live_stack.py  mute.py  nmo.py  semblance.py  stacking.py  velocity_interpolation.py
pstm_view_va/widgets/: __init__.py  canvas.py  gather_panel.py  survey_map.py  volume_panel.py
pstm_view_va/windows/: __init__.py  stack_viewer.py  velocity_analysis.py
qc/: __init__.py  analysis.py
scaling_test_output/: scaling_results.csv
scaling_test_output/test_10km/: traces_metadata.json
scaling_test_output/test_1km/: traces_metadata.json
scaling_test_output/test_20km/: traces_metadata.json
scaling_test_output/test_2km/: traces_metadata.json
scaling_test_output/test_5km/: traces_metadata.json
scripts/: benchmark_metal.py  benchmark_optimizations.py  benchmark_optimized.py  build_metal.sh  compare_kernels.py  diagnose_pstm.py  prepare_common_offset.py  profile_kernel.py  profile_kernel_direct.py  profile_metal_breakdown.py  scaling_test.py  test_trace_centric.py  verify_3d_parallel.py
stacks.png/: zarr.json
stacks_fold.zarr/: zarr.json
synthetic/: __init__.py  common_offset_gathers.py
synthetic_output/: diffractor_headers.parquet
synthetic_output/diffractor_traces.zarr/: .zarray  .zattrs  26.0
synthetic_output2/: diffractor_headers.parquet  diffractor_traces_metadata.json  metadata.json
synthetic_output2/diffractor_traces.zarr/: .zarray  .zattrs  103.0
tests/: __init__.py  test_basic.py  test_cig.py  test_config.py  test_data.py  test_integration.py  test_interpolation.py  test_io_optimization.py  test_kernels.py  test_pipeline.py  test_profiling.py  test_progress.py  test_qc.py  test_settings.py  test_synthetic.py  test_time_variant.py  test_utils.py
tests/fixtures/: __init__.py  synthetic.py
utils/: __init__.py  edge_cases.py  io_optimization.py  units.py  validation.py
wizard/: __init__.py  app.py
(+18 files in other folders)
