[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pstm"
version = "0.1.0"
description = "3D Prestack Kirchhoff Time Migration for Apple Silicon"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [
    {name = "Oleg", email = "oleg@example.com"}
]
keywords = ["seismic", "migration", "geophysics", "kirchhoff", "pstm"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Physics",
]

dependencies = [
    "numpy>=1.24",
    "numba>=0.58",
    "zarr>=2.16",
    "polars>=0.19",
    "scipy>=1.11",
    "pydantic>=2.0",
    "rich>=13.0",
    "pyarrow>=13.0",
    "psutil>=5.9",
]

[project.optional-dependencies]
gpu = [
    "mlx>=0.4",
]
viz = [
    "matplotlib>=3.7",
]
segy = [
    "segyio>=1.9",
]
tui = [
    "textual>=0.40",
]
dev = [
    "pytest>=7.4",
    "pytest-benchmark",
    "pytest-cov",
    "mypy>=1.5",
    "ruff>=0.1",
]
all = [
    "pstm[gpu,viz,segy,tui,dev]",
]

[project.scripts]
pstm = "pstm.__main__:main"

[project.urls]
Homepage = "https://github.com/user/pstm"
Documentation = "https://github.com/user/pstm#readme"
Repository = "https://github.com/user/pstm"

[tool.hatch.build.targets.wheel]
packages = ["pstm"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
filterwarnings = ["ignore::DeprecationWarning"]
